--- a/Frontend/trivializer/package.json
+++ b/Frontend/trivializer/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-stripe-checkout": "^2.6.3",
     "react-stripe-elements": "^2.0.1",
     "redux": "^4.0.1",
     "redux-form": "^7.4.2",
