--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
@@ -21,7 +22,8 @@
     "knex": "^0.15.2",
     "morgan": "^1.9.0",
     "simplecrypt": "^0.1.0",
-    "sqlite3": "^4.0.2"
+    "sqlite3": "^4.0.2",
+    "stripe": "^6.15.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.3"
