--- a/Frontend/trivializer/package.json
+++ b/Frontend/trivializer/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "firebase": "^5.5.8",
     "react": "^16.6.0",
     "react-credit-cards": "^0.7.0",
     "react-dom": "^16.6.0",
