--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,7 +21,8 @@
     "knex": "^0.15.2",
     "morgan": "^1.9.0",
     "simplecrypt": "^0.1.0",
-    "sqlite3": "^4.0.2"
+    "sqlite3": "^4.0.2",
+    "stripe": "^6.15.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.3"
