Add basic drag and drop to Questions

--- a/Frontend/trivializer/package.json
+++ b/Frontend/trivializer/package.json
@@ -6,8 +6,12 @@
     "axios": "^0.18.0",
     "dompurify": "^1.0.8",
     "firebase": "^5.5.8",
+    "lodash.flow": "^3.5.0",
     "react": "^16.6.0",
+    "react-addons-update": "^15.6.2",
     "react-credit-cards": "^0.7.0",
+    "react-dnd": "^6.0.0",
+    "react-dnd-html5-backend": "^6.0.0",
     "react-dom": "^16.6.0",
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
