--- a/Frontend/trivializer/package.json
+++ b/Frontend/trivializer/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "2.1.1",
     "react-stripe-checkout": "^2.6.3",
     "react-stripe-elements": "^2.0.1",
+    "react-to-print": "^2.0.0-alpha-4",
     "redux": "^4.0.1",
     "redux-form": "^7.4.2",
     "redux-logger": "^3.0.6",
