--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,6 +20,7 @@
     "helmet": "^3.13.0",
     "jsonwebtoken": "^8.3.0",
     "knex": "^0.15.2",
+    "mailgun-js": "^0.22.0",
     "morgan": "^1.9.0",
     "simplecrypt": "^0.1.0",
     "sqlite3": "^4.0.2",
