--- a/package.json
+++ b/package.json
@@ -2,5 +2,11 @@
   "dependencies": {
     "knex": "^0.15.2",
     "sqlite3": "^4.0.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build && cp build/index.html build/404.html",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   }
 }
