--- a/Frontend/trivializer/package.json
+++ b/Frontend/trivializer/package.json
@@ -13,6 +13,7 @@
     "react-dnd": "^6.0.0",
     "react-dnd-html5-backend": "^6.0.0",
     "react-dom": "^16.6.0",
+    "react-images-upload": "^1.2.3",
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
