--- a/Frontend/trivializer/package.json
+++ b/Frontend/trivializer/package.json
@@ -20,7 +20,7 @@
     "react-stripe-checkout": "^2.6.3",
     "react-stripe-elements": "^2.0.1",
     "react-to-print": "^2.0.0-alpha-4",
-    "react-transition-group": "^2.5.2",
+    "react-transition-group": "1.x",
     "redux": "^4.0.1",
     "redux-form": "^7.4.2",
     "redux-logger": "^3.0.6",
